# embedded

./: .gitignore  README.md
ai/: README.md  runway.py
ai/helicopter-detection-python/: README.md  od.py
ai/neural-df/: README.md  nemi.py  network.py  neural.py
ai/neural-worm-python/: README.md  sp_class.py  sp_main.py  sp_var.py
android/: README.md
android/crm-call-module/: README.md  local.properties
android/crm-call-module/app/: build.gradle
android/tensorflow-lite/: README.md  local.properties
c++/ident/: Makefile  README  ident.cxx  ident.h  main.cxx
c++/platform/: CMakeLists.txt
c++/platform/src/: SXRUtils.cpp  SendXReceive.hpp
c++/platform/src/app/: SXRApplicationManagerClient.hpp
c++/platform/src/common/: SXRCommonBackend.hpp  SXRCommonMain.hpp
c++/platform/src/injection/: SXRCommonInj.hpp  SXRDaivbInjection.cpp  SXRDaivbInjection.hpp  SXRDaivbPublishInjection.hpp  SXREcuPublishInjection.cpp  SXRVsmInjection.cpp  SXRVsmInjection.hpp
c++/platform/src/messages/: SXRCommonMessage.cpp  SXRCommonMessage.hpp  SXRMessageEcuToVb.hpp  SXRMessageVbToEcu.cpp
c++/platform/src/vsm/: SXRPlatformSignalManager.cpp  SXRPlatformSignalManager.hpp  SXRPlatformSignalsServiceClient.cpp
c++/platform/tests/: CMakeLists.txt
c++/platform/tests/unitTests/: CMakeLists.txt
c++/platform/tests/unitTests/mocks/: SXRHelperMock.hpp  SXRInitFunctionMock.hpp  SXRWithQueueMock.hpp  SXRWithoutQueueMock.hpp
c++/platform/tests/unitTests/mocks/client/: SXRPlatformSignalManagerMock.hpp
c++/platform/tests/unitTests/src/: SXRPlatformSignalsServiceClientTests.cpp
c++/platform/utils/: commStackTester.py  post-checkout  pre-commit
c++/platform/utils/console/: readme
c++/platform/utils/rpc-bridge-fake/: CMakeLists.txt  Injection.cpp  README  RpcFake.hpp
c++/voip-gateway-arm/ftgui/: bookmodel.h  event.cpp  ftgui.pro  main.cpp  model.cpp
c++/voip-gateway-arm/ftsip/: csengine.h  focus.cpp  procevent.cpp  sdp.cpp  udp.h  version.h
cpp/database/: graph_traversal.cpp
cpp/ident/: README  ident.h
cpp/platform/: CHANGELOG  CMakeLists.txt
cpp/platform/src/: CMakeLists.txt  SXRUtils.hpp  SendXReceive.cpp  main.cpp  version.h
cpp/platform/src/app/: SXRApplicationManagerClient.cpp
cpp/platform/src/common/: SXRTypes.hpp
cpp/platform/src/engmenu/: SXREngMenuAdapter.cpp  SXREngMenuAdapter.hpp
cpp/platform/src/injection/: SXRCommonInj.cpp  SXRDaivbPublishInjection.cpp  SXREcuPublishInjection.hpp
cpp/platform/src/messages/: SXRMessageEcuToVb.cpp  SXRMessageVbToEcu.hpp
cpp/platform/src/queues/: SXRQueue.hpp
cpp/platform/src/vsm/: SXRIPlatformSignalsServiceClient.hpp  SXRPlatformSignalsServiceClient.hpp
cpp/platform/tests/: CMakeLists.txt
cpp/platform/utils/console/: CMakeLists.txt  main.cpp  parsers.cpp
cpp/platform/utils/create_queue/: CMakeLists.txt  README  main.cpp
cpp/pmdk/: pmdk  pmdk.cpp
cpp/trace/: IOtlpTrace.cpp  IOtlpTrace.hpp  OtlpTrace.cpp  OtlpTrace.hpp  README
cpp/voip-gateway-arm/: ip.sh
cpp/voip-gateway-arm/ftgui/: bookmodel.cpp  callmodel.cpp  dialog.h  freqmodel.h  group.cpp  ui_dialog.h
cpp/voip-gateway-arm/ftsip/: Makefile  console.cpp  console.h  main.cpp  proxy.cpp  rtp.cpp  version.sh
cv/: README.md  bob.py  filter.py  findline.py  fnoise.py  fractal.py  hsv.py
cv/gradient/: Makefile  README.md  gradient.cpp  gradient.py  video.cpp  video.mk  video_gradient.py
cv/matched-filter-arm-dsp/: README.md  gen_image.py  makefile  mf.h  products.mak  readme.md
cv/matched-filter-arm-dsp/codec_dsp/: codec_dsp.c  codec_dsp.h  codec_dsp_priv.h  fft2.c  makefile  mfilter.c  mfilter.h
cv/matched-filter-arm-dsp/main_app/: app.c  app.h  makefile  proc.c  run.sh
cv/matched-filter-arm-dsp/server_dsp/: _config.bld  main.c  makefile
cv/runway-detection/: README.md  drone.py  drone_func.py  drone_rw.py  drone_vars.py  run.sh
cv/target-tracking/: README.md  run.sh  target.py  target_func.py
cv/visual-radar-detector/: README.md  rad2d-rot.py  rad2d-video.py  rad2d.py
django/fabric/: INSTALL.md  README.md  db.sqlite3  manage.py  readme.md
django/fabric/fabric/: settings.py  urls.py  wsgi.py
django/fabric/polls/: admin.py  models.py  serializers.py  urls.py  views.py
embedded/: README.md
embedded/gpu-fft2d-rpi/: README.md  af.c  afshow.py  fftrun.sh  fftshow.py  gpu_fft_base.c  makefile  run.sh
embedded/landing-marker-fpga/: README.md  cv_core.vhd  cv_dummy.vhd  cv_grad.vhd  cv_package.vhd  debounce.vhd  i2c_sender.vhd  ov7670_capture.vhd  ov7670_controller.vhd  ov7670_registers.vhd  ov7670_top.vhd  vga.vhd  zed_board.xdc
embedded/medicine-stm32/: Makefile  README.md  ion.ioc
embedded/medicine-stm32/Inc/: main.h  stm32_tm1637.h  stm32f1xx_it.h
embedded/medicine-stm32/Src/: ion_core.c  main.c  stm32_tm1637.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
embedded/passive-radar-fpga-dsp-arm/: README.md  af.h  makefile  products.mak
embedded/passive-radar-fpga-dsp-arm/dsp/: makefile
embedded/passive-radar-fpga-dsp-arm/mon/: func_mon.py  init_mon.py  main_mon.py  run.sh
embedded/passive-radar-fpga-dsp-arm/multix86/: func_multi.py  init_multi.py  main_multi.py  makefile  multi.c  multi.h  proc.c  run.sh  stop.sh
embedded/passive-radar-fpga-dsp-arm/py/: af_client.py  dsp_client.py  libutils.py  pclvars.py  show_file.py
embedded/passive-radar-fpga-dsp-arm/udp/: makefile  readme.txt  udp.c  udp.h
embedded/passive-radar-fpga-dsp-arm/zboard/: afilter.c  afilter.h  makefile  utils.c  xdma.c  xdma.h  zboard.c  zboard.h
embedded/voip-gateway-arm/: README.md  cwp_call.sh  rch.sh
embedded/voip-gateway-arm/ftgui/: callmodel.h  command.txt  dialog.cpp  freqmodel.cpp  ftgui.qrc  radiomodel.h  setup.cpp  widget.cpp  widget.h
embedded/voip-gateway-arm/ftsip/: csengine.cpp  event.cpp  global.db  (+1 more)
python-apps/: README.md  ab.py  ab2d.py  ablattice.py  eigen.py  eigofcov.py  gram.py  lintrans.py  music.py  orto_ab2d.py  pca.py
qt/start/: main.cpp  start.pro
voip-gateway-arm/: hmi.sh  radio_call.sh
voip-gateway-arm/ftgui/: global.db  intersip.h  model.h  radiomodel.cpp  udp.cpp
voip-gateway-arm/ftsip/: ftsip.pro  intervoip.h
(+41 files in other folders)
